--- a/_layout/header.html
+++ b/_layout/header.html
@@ -3,10 +3,10 @@
 <nav>
   <ul>
 
-    <li><a href="/menu1/">Publications</a></li>
-    <li><a href="/menu2/">Talks</a></li>
-    <li><a href="/menu3/">Projects</a></li>
-    <li><a href="/menu4/">Teaching</a></li>
+    <li><a href="/Publications/">Publications</a></li>
+    <li><a href="/Talks/">Talks</a></li>
+    <li><a href="/Projects/">Projects</a></li>
+    <li><a href="/Teaching/">Teaching</a></li>
 
   </ul>
   <img src="/assets/hamburger.svg" id="menu-icon">
