--- a/_layout/head.html
+++ b/_layout/head.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  {{if hasmath}} {{insert head_katex.html }}     {{end}}
+  {{if hasmath}} {{insert head_katex.html }}      {{end}}
   {{if hascode}} {{insert head_highlight.html }}   {{end}}
   <link rel="stylesheet" href="/css/franklin.css">
   <link rel="stylesheet" href="/css/basic.css">
   <link rel="icon" href="/assets/favicon.png">
   {{isdef title}} <title>{{fill title}}</title>  {{end}}
+  <meta name="google-site-verification" content="O5wJ5nUo8Nqs17mZqH9e6GhbCGM1oX1PXABGJfvrqTc" />
 </head>
 <body>
   {{insert header.html}}
-
-<!-- Content appended here -->
