--- a/_layout/header.html
+++ b/_layout/header.html
@@ -9,6 +9,6 @@
     <li><a href="/Teaching/">Teaching</a></li>
 
   </ul>
-  <img src="/assets/hamburger.svg" id="menu-icon">
+  <img src="/assets/hamburger.svg" id="menu-icon" alt="Menu">
 </nav>
 </header>
