--- a/_layout/header.html
+++ b/_layout/header.html
@@ -6,6 +6,7 @@
     <li><a href="/Publications/">Publications</a></li>
     <li><a href="/Talks/">Talks</a></li>
     <li><a href="/Projects/">Projects</a></li>
+    <li><a href="/Code/">Code</a></li>
     <li><a href="/Teaching/">Teaching</a></li>
 
   </ul>
